--- a/publish/imprint.html
+++ b/publish/imprint.html
@@ -1,8 +1,1 @@
-
-<h1>Impressum</h1>
-<h2>Dies ist eine App von einer Privatperson:</h2>
-
-Dominik Bruhn
-<br/>
-Email: dominikbruhn@googlemail.com
-<br/>
+Dies ist eine App von einer Privatperson: Dominik Bruhn, Email: dominikbruhn@googlemail.com, Wohnort: Dortmund
